# ai-leads-conversion-engine-for-edtech-admissions

./: .env.example  README.md  modal_deploy.py  pyproject.toml  start.sh
backend/: database.py  llm.py  main.py  models.py  scoring.py
frontend/: candidate_app.py  dashboard_app.py
