[project]
name = "test-interview-kickstart-1"
version = "1.0.0"
description = "AI Admissions & Enrollment Agent — Interview Kickstart MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pymongo>=4.7.0",
    "streamlit>=1.35.0",
    "openai>=1.30",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]
